

# ===================================================================
# パッケージの検査
# ===================================================================


# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${GTEST_INCLUDE_DIR}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
#  テスト用のターゲットの設定
# ===================================================================

add_executable ( mvn_read_test
  read_test.cc
  $<TARGET_OBJECTS:ym_mvn_obj_d>
  $<TARGET_OBJECTS:ym_verilog_obj_d>
  $<TARGET_OBJECTS:ym_cell_obj_d>
  $<TARGET_OBJECTS:ym_logic_obj_d>
  $<TARGET_OBJECTS:ym_base_obj_d>
  )

target_compile_options ( mvn_read_test
  PRIVATE "-g"
  )

target_link_libraries ( mvn_read_test
  ${YM_LIB_DEPENDS}
  )
